web/book/tests/examples/snapshots/examples__book__language-features__case__1.snap
---
source: web/book/tests/examples/book.rs
expression: "from employees\nderive distance = case {\n  city == \"Calgary\" => 0,\n  city == \"Edmonton\" => 300,\n  true => \"Unknown\",\n}\n"
---
SELECT
  *,
  CASE
    WHEN city = 'Calgary' THEN 0
    WHEN city = 'Edmonton' THEN 300
    ELSE 'Unknown'
  END AS distance
FROM
  employees

